--- a/molecule/default/playbook.yml
+++ b/molecule/default/playbook.yml
@@ -1,5 +1,20 @@
 ---
 - name: Converge
-  hosts: all
+  hosts: instance
+  become: true
   roles:
+    - role: lean_delivery.java
+      vars:
+        java_package: jdk
+        java_major_version: 8
+        java_minor_version: 202
+        java_arch: x64
     - role: steamulo.steamengine
+      vars:
+        steamengine_project_name: test_springboot
+        steamengine_project_type: springboot
+        steamengine_build_url: http://delivery.steamulo.org/SteamEngineV2_tests/hello-world-app-spring-boot.jar
+        steamengine_build_sha1_checksum: sha1:332ea24fea20f0cecbc2b855b9174c49bd3feff2
+        steamengine_project_configuration:
+          server:
+            port: 8085
