--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,2 +1,28 @@
 ---
-# tasks file for steamulo.steamengine
+
+- name: Verify project type
+  assert:
+    that:
+      - "steamengine_project_type is defined"
+      - "steamengine_project_type == 'springboot' or steamengine_project_type == 'static'"
+
+- import_tasks: "{{ steamengine_project_type }}/asserts.yml"
+
+- import_tasks: install_deps.yml
+  tags: dependencies
+
+- import_tasks: user.yml
+  tags: user
+
+- import_tasks: structure.yml
+  tags: structure
+
+- import_tasks: "{{ steamengine_project_type }}/deploy.yml"
+  when: steamengine_build_url is defined
+  tags: deploy
+
+- import_tasks: runtime.yml
+  tags: runtime
+
+- import_tasks: "{{ steamengine_project_type }}/runtime.yml"
+  tags: runtime
