[IMPR] factorization & add nodejs base

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -10,7 +10,7 @@ steamengine_project_ssh_keys: []
 
 steamengine_logrotate_scripts:
   - name: "{{ steamengine_project_name }}"
-    path: "/{{ steamengine_project_name }}/logs/*.log"
+    path: "{{ steamengine_logs_path }}/*.log"
     options:
       - daily
       - missingok
