--- a/tasks/springboot/deploy.yml
+++ b/tasks/springboot/deploy.yml
@@ -3,9 +3,9 @@
 - name: Creation configuration file
   copy:
     content: "{{ steamengine_project_configuration | to_nice_yaml }}"
-    dest: "/{{ steamengine_project_name }}/conf/project_env_conf.yml"
-    owner: "{{ steamengine_project_name }}"
-    group: "{{ steamengine_project_name }}app"
+    dest: "{{ steamengine_conf_path }}/project_env_conf.yml"
+    owner: "{{ steamengine_project_user }}"
+    group: "{{ steamengine_app_user }}"
     mode: 0640
   notify:
     - "steamengine restart"
@@ -13,10 +13,10 @@
 - name: "Download build {{ steamengine_build_url }}"
   get_url:
     url: "{{ steamengine_build_url }}"
-    dest: "/{{ steamengine_project_name }}/project_root/project.jar"
+    dest: "{{ steamengine_project_root_path }}/project.jar"
     checksum: "{{ steamengine_build_sha1_checksum }}"
-    owner: "{{ steamengine_project_name }}"
-    group: "{{ steamengine_project_name }}app"
+    owner: "{{ steamengine_project_user }}"
+    group: "{{ steamengine_app_user }}"
     mode: 0750
   notify:
     - "steamengine restart"
