--- a/molecule/static/molecule.yml
+++ b/molecule/static/molecule.yml
@@ -17,7 +17,7 @@ provisioner:
   lint:
     name: ansible-lint
 scenario:
-  name: static_front
+  name: static
 verifier:
   name: testinfra
   lint:
