--- a/vars/main.yml
+++ b/vars/main.yml
@@ -11,3 +11,13 @@ steamengine_project_root_path_web: "{{ steamengine_project_root_path }}/www"
 steamengine_conf_path: "{{ steamengine_home_path }}/conf"
 steamengine_bin_path: "{{ steamengine_home_path }}/bin"
 steamengine_logs_path: "{{ steamengine_home_path }}/logs"
+
+# OTHERS
+steamengine_project_types:
+  - springboot
+  - static
+  - nodejs
+  - tomcat7
+
+# TOMCAT7
+steamengine_tomcat7_tomcat_url: "https://archive.apache.org/dist/tomcat/tomcat-7//v{{ steamengine_tomcat7_tomcat_version }}/bin/apache-tomcat-{{ steamengine_tomcat7_tomcat_version }}.tar.gz"
