--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,7 +4,7 @@
   assert:
     that:
       - "steamengine_project_type is defined"
-      - "steamengine_project_type == 'springboot' or steamengine_project_type == 'static' or steamengine_project_type == 'nodejs'"
+      - "steamengine_project_type in steamengine_project_types"
 
 - import_tasks: "{{ steamengine_project_type }}/asserts.yml"
 
