--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -6,23 +6,23 @@
       - "steamengine_project_type is defined"
       - "steamengine_project_type in steamengine_project_types"
 
-- import_tasks: "{{ steamengine_project_type }}/asserts.yml"
+- include_tasks: "{{ steamengine_project_type }}/asserts.yml"
 
-- import_tasks: common/install_deps.yml
+- include_tasks: common/install_deps.yml
   tags: dependencies
 
-- import_tasks: common/user.yml
+- include_tasks: common/user.yml
   tags: user
 
-- import_tasks: common/structure.yml
+- include_tasks: common/structure.yml
   tags: structure
 
-- import_tasks: "{{ steamengine_project_type }}/deploy.yml"
+- include_tasks: "{{ steamengine_project_type }}/deploy.yml"
   when: steamengine_build_url is defined
   tags: deploy
 
-- import_tasks: common/runtime.yml
+- include_tasks: common/runtime.yml
   tags: runtime
 
-- import_tasks: "{{ steamengine_project_type }}/runtime.yml"
+- include_tasks: "{{ steamengine_project_type }}/runtime.yml"
   tags: runtime
