[IMPR] add java opts for tomcat and springboot, use update_from_archive for tomcat deployment

--- a/tasks/include/update_from_archive.yml
+++ b/tasks/include/update_from_archive.yml
@@ -1,8 +1,8 @@
 ---
 
-- name: Unzip build
+- name: Unarchive build
   unarchive:
-    src: "{{ zip_path }}"
+    src: "{{ archive_path }}"
     dest: "{{ dest_path }}"
     remote_src: true
     list_files: true
