--- a/tasks/nodejs/runtime.yml
+++ b/tasks/nodejs/runtime.yml
@@ -7,6 +7,8 @@
     owner: root
     group: root
     mode: u=rw,g=r,o=r
+  notify:
+    - "steamengine restart"
 
 - name: "Ensure {{ steamengine_project_name }} is running and set to start on boot"
   systemd:
