--- a/vars/main.yml
+++ b/vars/main.yml
@@ -21,3 +21,16 @@ steamengine_project_types:
 
 # TOMCAT7
 steamengine_tomcat7_tomcat_url: "https://archive.apache.org/dist/tomcat/tomcat-7//v{{ steamengine_tomcat7_tomcat_version }}/bin/apache-tomcat-{{ steamengine_tomcat7_tomcat_version }}.tar.gz"
+
+# JAVA
+steamengine_java_base_opts:
+  - "-server"
+  - "-native"
+  - "-XX:+HeapDumpOnOutOfMemoryError"
+  - "-XX:HeapDumpPath={{ steamengine_logs_path }}/heap_dump"
+  - "-XX:+PrintGCDateStamps"
+  - "-XX:+PrintGCDetails"
+  - "-XX:+UseG1GC"
+  - "-Xloggc:{{ steamengine_logs_path }}/garbage-collector.log"
+  - "-XX:-OmitStackTraceInFastThrow"
+  - "-Dfile.encoding=UTF-8"
