--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -31,3 +31,8 @@ steamengine_tomcat7_acceptor_thread_count: 1
 steamengine_tomcat7_max_connections: 10000
 steamengine_tomcat7_min_spare_threads: 10
 steamengine_tomcat7_connection_timeout: 20000
+
+# JAVA
+steamengine_java_opts:
+  - "-Xmx512M"
+  - "-Xms512M"
