--- a/tasks/static/deploy.yml
+++ b/tasks/static/deploy.yml
@@ -19,9 +19,9 @@
     state: directory
 
 - name: Update www directory
-  import_tasks: include/update_from_zip.yml
+  import_tasks: include/update_from_archive.yml
   vars:
-    zip_path: "{{ steamengine_project_root_path }}/project.zip"
+    archive_path: "{{ steamengine_project_root_path }}/project.zip"
     dest_path: "{{ steamengine_project_root_path_web }}"
   when: get_url_build.changed
 
