--- a/tasks/tomcat7/deploy.yml
+++ b/tasks/tomcat7/deploy.yml
@@ -95,12 +95,17 @@
   notify:
     - "steamengine restart"
 
-- name: Unzip tomcat
-  unarchive:
-    src: "{{ steamengine_project_root_path }}/project.war"
-    dest: "{{ steamengine_project_root_path }}/tomcat/webapps/ROOT"
+- name: Update webapps/ROOT directory
+  import_tasks: include/update_from_archive.yml
+  vars:
+    archive_path: "{{ steamengine_project_root_path }}/project.war"
+    dest_path: "{{ steamengine_project_root_path }}/tomcat/webapps/ROOT"
+  when: get_url_build.changed
+
+- name: "Add read permission for {{ steamengine_app_user }}"
+  file:
+    path: "{{ steamengine_project_root_path }}/tomcat/webapps/ROOT"
     owner: "{{ steamengine_project_user }}"
     group: "{{ steamengine_app_user }}"
+    recurse: true
     mode: u=rwx,g=rx,o=
-    remote_src: true
-  when: get_url_build.changed
