--- a/tasks/tomcat7/deploy.yml
+++ b/tasks/tomcat7/deploy.yml
@@ -96,7 +96,7 @@
     - "steamengine restart"
 
 - name: Update webapps/ROOT directory
-  import_tasks: include/update_from_archive.yml
+  include_tasks: include/update_from_archive.yml
   vars:
     archive_path: "{{ steamengine_project_root_path }}/project.war"
     dest_path: "{{ steamengine_project_root_path }}/tomcat/webapps/ROOT"
