--- a/tasks/springboot/deploy.yml
+++ b/tasks/springboot/deploy.yml
@@ -1,6 +1,6 @@
 ---
 
-- name: Creation configuration file
+- name: Create configuration file
   copy:
     content: "{{ steamengine_project_configuration | to_nice_yaml }}"
     dest: "{{ steamengine_conf_path }}/project_env_conf.yml"
