--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -32,6 +32,7 @@ steamengine_tomcat7_max_connections: 10000
 steamengine_tomcat7_min_spare_threads: 10
 steamengine_tomcat7_connection_timeout: 20000
 steamengine_tomcat7_allow_insecure_write_web_inf: false
+steamengine_tomcat7_configuration_key: "configuration.filename"
 
 # JAVA
 steamengine_java_opts:
