--- a/tasks/tomcat7/deploy.yml
+++ b/tasks/tomcat7/deploy.yml
@@ -120,6 +120,7 @@
     group: "{{ steamengine_app_user }}"
     recurse: true
     mode: u=rwx,g=rx,o=
+  when: get_url_build.changed
 
 - name: "Add write permission for {{ steamengine_app_user }} on WEB-INF"
   file:
@@ -128,4 +129,4 @@
     group: "{{ steamengine_app_user }}"
     recurse: true
     mode: u=rwx,g=rwx,o=
-  when: steamengine_tomcat7_allow_insecure_write_web_inf
+  when: steamengine_tomcat7_allow_insecure_write_web_inf and get_url_build.changed
