[ADD] unsecure application write access to ROOT folder for CardiboxV6

--- a/tasks/tomcat7/deploy.yml
+++ b/tasks/tomcat7/deploy.yml
@@ -130,3 +130,12 @@
     recurse: true
     mode: u=rwx,g=rwx,o=
   when: steamengine_tomcat7_allow_insecure_write_web_inf and get_url_build.changed
+
+- name: "Add write permission for {{ steamengine_app_user }} on ROOT"
+  file:
+    path: "{{ steamengine_project_root_path }}/tomcat/webapps/ROOT"
+    owner: "{{ steamengine_project_user }}"
+    group: "{{ steamengine_app_user }}"
+    recurse: true
+    mode: u=rwx,g=rwx,o=
+  when: steamengine_tomcat7_allow_insecure_write_root and get_url_build.changed
