[IMPR] assert build url only when deploying and fix TUs

--- a/molecule/nodejs/playbook.yml
+++ b/molecule/nodejs/playbook.yml
@@ -16,5 +16,5 @@
       vars:
         steamengine_project_name: test_nodejs
         steamengine_project_type: nodejs
-        steamengine_build_url: http://delivery.steamulo.org/SteamEngineV2_tests/nodejs-express-build.zip
+        steamengine_build_url: https://delivery.steamulo.org/SteamEngineV2_tests/nodejs-express-build.zip
         steamengine_build_sha1_checksum: sha1:5ca5bebc8f3b770358732c90b20b94b710158d55.
