--- a/molecule/tomcat7/playbook.yml
+++ b/molecule/tomcat7/playbook.yml
@@ -6,12 +6,12 @@
     - role: lean_delivery.java
       vars:
         transport: web
-        transport_web: https://s3-eu-west-1.amazonaws.com/delivery.steamulo.org/oracle-java/jdk-8u211-linux-x64.tar.gz
+        transport_web: https://delivery.steamulo.org/oracle-java/jdk-8u211-linux-x64.tar.gz
     - role: steamulo.steamengine
       vars:
         steamengine_project_name: test_tomcat7
         steamengine_project_type: tomcat7
-        steamengine_build_url: http://delivery.steamulo.org/SteamEngineV2_tests/tomcat_test.war
+        steamengine_build_url: https://delivery.steamulo.org/SteamEngineV2_tests/tomcat_test.war
         steamengine_build_sha1_checksum: sha1:80f5053b166c69d81697ba21113c673f8372aca0..
         steamengine_tomcat7_http_port: 8088
         steamengine_project_configuration:
