--- a/tasks/tomcat7/asserts.yml
+++ b/tasks/tomcat7/asserts.yml
@@ -3,3 +3,4 @@
 - name: Verify build extension
   assert:
     that: (steamengine_build_url | basename | splitext)[1] == ".war"
+  when: steamengine_build_url is defined
