[IMPR] add tag in tasks because include_tasks does not inherit

--- a/tasks/common/install_deps.yml
+++ b/tasks/common/install_deps.yml
@@ -3,7 +3,9 @@
 - name: Install acl package
   apt:
     name: acl
+  tags: dependencies
 
 - name: Install unzip package
   apt:
     name: unzip
+  tags: dependencies
