--- a/tasks/common/runtime.yml
+++ b/tasks/common/runtime.yml
@@ -7,6 +7,7 @@
     owner: "{{ steamengine_project_user }}"
     group: "{{ steamengine_project_user }}"
     mode: 0500
+  tags: runtime
 
 - name: Create sudo configuration
   copy:
@@ -17,6 +18,7 @@
     owner: root
     group: root
     mode: 0440
+  tags: runtime
 
 - name: Grant syslog user write access to logs directory
   acl:
@@ -25,6 +27,7 @@
     etype: user
     permissions: rwx
     state: present
+  tags: runtime
 
 - name: Create rsyslog configuration
   template:
@@ -35,9 +38,11 @@
     mode: 0644
   notify:
     - "rsyslog restart"
+  tags: runtime
 
 - name: Create logrotate scripts
   template:
     src: logrotate.conf.j2
     dest: "/etc/logrotate.d/{{ item.name }}"
   with_items: "{{ steamengine_logrotate_scripts }}"
+  tags: runtime
