--- a/tasks/common/user.yml
+++ b/tasks/common/user.yml
@@ -7,6 +7,7 @@
   with_items:
     - "{{ steamengine_project_user }}"
     - "{{ steamengine_app_user }}"
+  tags: user
 
 - name: "Create project app user {{ steamengine_app_user }}"
   user:
@@ -15,6 +16,7 @@
     createhome: false
     group: "{{ steamengine_app_user }}"
     append: true
+  tags: user
 
 - name: "Create project user {{ steamengine_project_user }}"
   user:
@@ -27,6 +29,7 @@
       - "{{ steamengine_app_user }}"
     shell: "/bin/bash"
     append: true
+  tags: user
 
 - name: "Ensure authorized_keys are present for user {{ steamengine_project_user }}"
   authorized_key:
@@ -35,3 +38,4 @@
     state: present
     manage_dir: true
     exclusive: true
+  tags: user
