--- a/tasks/nodejs/deploy.yml
+++ b/tasks/nodejs/deploy.yml
@@ -11,6 +11,7 @@
   notify:
     - "steamengine restart"
   register: get_url_build
+  tags: deploy
 
 - name: Create www directory
   file:
@@ -19,6 +20,7 @@
     group: "{{ steamengine_app_user }}"
     mode: u=rwx,g=rx,o=
     state: directory
+  tags: deploy
 
 - name: Create pm2 directory
   file:
@@ -27,6 +29,7 @@
     group: "{{ steamengine_app_user }}"
     mode: u=rwx,g=rwx,o=
     state: directory
+  tags: deploy
 
 - name: Update www directory
   include_tasks: include/update_from_archive.yml
@@ -34,6 +37,7 @@
     archive_path: "{{ steamengine_project_root_path }}/project.zip"
     dest_path: "{{ steamengine_project_root_path_web }}"
   when: get_url_build.changed
+  tags: deploy
 
 - name: "Add read permission for {{ steamengine_app_user }}"
   file:
@@ -42,3 +46,4 @@
     group: "{{ steamengine_app_user }}"
     recurse: true
     mode: u=rwx,g=rx,o=
+  tags: deploy
