--- a/tasks/static/deploy.yml
+++ b/tasks/static/deploy.yml
@@ -9,6 +9,7 @@
     group: "{{ steamengine_app_user }}"
     mode: u=rwx,g=rx,o=
   register: get_url_build
+  tags: deploy
 
 - name: Create www directory
   file:
@@ -17,6 +18,7 @@
     group: "{{ steamengine_app_user }}"
     mode: u=rwx,g=rx,o=
     state: directory
+  tags: deploy
 
 - name: Update www directory
   include_tasks: include/update_from_archive.yml
@@ -24,6 +26,7 @@
     archive_path: "{{ steamengine_project_root_path }}/project.zip"
     dest_path: "{{ steamengine_project_root_path_web }}"
   when: get_url_build.changed
+  tags: deploy
 
 - name: "Add read permission for {{ steamengine_app_user }}"
   file:
@@ -32,3 +35,4 @@
     group: "{{ steamengine_app_user }}"
     recurse: true
     mode: u=rwx,g=rx,o=
+  tags: deploy
