--- a/tasks/springboot/deploy.yml
+++ b/tasks/springboot/deploy.yml
@@ -11,6 +11,7 @@
     mode: 0640
   notify:
     - "steamengine restart"
+  tags: deploy
 
 - name: "Download build {{ steamengine_build_url }}"
   get_url:
@@ -22,3 +23,4 @@
     mode: 0750
   notify:
     - "steamengine restart"
+  tags: deploy
