[IMPR] fix deploy permission issue when using steamengine_tomcat7_allow_insecure_write_* conf

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,5 +1,16 @@
 ---
 
+- name: rsyslog restart
+  become: true
+  systemd:
+    name: "rsyslog"
+    state: restarted
+
+# This is done this way in order to support steamengine_tomcat7_allow_insecure_write_*
+#  application might have created directory on which steamengine_project_user doesn't have ownership
+- name: steamengine fixpermissions
+  command: "/{{ steamengine_project_name }}/bin/steamengine fixpermissions"
+
 - name: steamengine restart
   command: "/{{ steamengine_project_name }}/bin/steamengine restart"
 
@@ -8,9 +19,3 @@
 
 - name: steamengine start
   command: "/{{ steamengine_project_name }}/bin/steamengine start"
-
-- name: rsyslog restart
-  become: true
-  systemd:
-    name: "rsyslog"
-    state: restarted
