--- a/tasks/common/structure.yml
+++ b/tasks/common/structure.yml
@@ -9,7 +9,7 @@
     mode: 0751
   with_items:
     - "{{ steamengine_home_path }}"
-  tags: structure
+  tags: steamengine_structure
 
 - name: Create project folder structure (2)
   file:
@@ -21,7 +21,7 @@
   with_items:
     - "{{ steamengine_project_root_path }}"
     - "{{ steamengine_conf_path }}"
-  tags: structure
+  tags: steamengine_structure
 
 - name: Create project folder structure (3)
   file:
@@ -32,7 +32,7 @@
     mode: 0750
   with_items:
     - "{{ steamengine_bin_path }}"
-  tags: structure
+  tags: steamengine_structure
 
 - name: Create project folder structure (4)
   file:
@@ -43,4 +43,4 @@
     mode: 0770
   with_items:
     - "{{ steamengine_logs_path }}"
-  tags: structure
+  tags: steamengine_structure
