--- a/tasks/nodejs/deploy.yml
+++ b/tasks/nodejs/deploy.yml
@@ -11,7 +11,9 @@
   notify:
     - "steamengine restart"
   register: get_url_build
-  tags: deploy
+  tags:
+    - steamengine_deploy
+    - steamengine_deploy_nodejs
 
 - name: Create www directory
   file:
@@ -20,7 +22,9 @@
     group: "{{ steamengine_app_user }}"
     mode: u=rwx,g=rx,o=
     state: directory
-  tags: deploy
+  tags:
+    - steamengine_deploy
+    - steamengine_deploy_nodejs
 
 - name: Create pm2 directory
   file:
@@ -29,7 +33,9 @@
     group: "{{ steamengine_app_user }}"
     mode: u=rwx,g=rwx,o=
     state: directory
-  tags: deploy
+  tags:
+    - steamengine_deploy
+    - steamengine_deploy_nodejs
 
 - name: Update www directory
   include_tasks: include/update_from_archive.yml
@@ -37,7 +43,9 @@
     archive_path: "{{ steamengine_project_root_path }}/project.zip"
     dest_path: "{{ steamengine_project_root_path_web }}"
   when: get_url_build.changed
-  tags: deploy
+  tags:
+    - steamengine_deploy
+    - steamengine_deploy_nodejs
 
 - name: "Add read permission for {{ steamengine_app_user }}"
   file:
@@ -46,4 +54,6 @@
     group: "{{ steamengine_app_user }}"
     recurse: true
     mode: u=rwx,g=rx,o=
-  tags: deploy
+  tags:
+    - steamengine_deploy
+    - steamengine_deploy_nodejs
