--- a/tasks/springboot/runtime.yml
+++ b/tasks/springboot/runtime.yml
@@ -9,7 +9,9 @@
     mode: u=rw,g=r,o=r
   notify:
     - "steamengine restart"
-  tags: runtime
+  tags:
+    - steamengine_runtime
+    - steamengine_runtime_springboot
 
 - name: "Ensure {{ steamengine_project_name }} is running and set to start on boot"
   systemd:
@@ -17,4 +19,6 @@
     enabled: true
     daemon_reload: true
     name: "{{ steamengine_project_name }}"
-  tags: runtime
+  tags:
+    - steamengine_runtime
+    - steamengine_runtime_springboot
