--- a/tasks/common/user.yml
+++ b/tasks/common/user.yml
@@ -7,7 +7,7 @@
   with_items:
     - "{{ steamengine_project_user }}"
     - "{{ steamengine_app_user }}"
-  tags: user
+  tags: steamengine_user
 
 - name: "Create project app user {{ steamengine_app_user }}"
   user:
@@ -16,7 +16,7 @@
     createhome: false
     group: "{{ steamengine_app_user }}"
     append: true
-  tags: user
+  tags: steamengine_user
 
 - name: "Create project user {{ steamengine_project_user }}"
   user:
@@ -29,7 +29,7 @@
       - "{{ steamengine_app_user }}"
     shell: "/bin/bash"
     append: true
-  tags: user
+  tags: steamengine_user
 
 - name: "Ensure authorized_keys are present for user {{ steamengine_project_user }}"
   authorized_key:
@@ -38,4 +38,4 @@
     state: present
     manage_dir: true
     exclusive: true
-  tags: user
+  tags: steamengine_user
