--- a/tasks/springboot/asserts.yml
+++ b/tasks/springboot/asserts.yml
@@ -4,3 +4,6 @@
   assert:
     that: (steamengine_build_url | basename | splitext)[1] == ".jar"
   when: steamengine_build_url is defined
+  tags:
+    - steamengine_deploy
+    - steamengine_deploy_springboot
