--- a/tasks/static/deploy.yml
+++ b/tasks/static/deploy.yml
@@ -10,7 +10,6 @@
     mode: u=rwx,g=rx,o=
   register: get_url_build
   tags:
-    - steamengine_deploy
     - steamengine_deploy_static
 
 - name: Create www directory
@@ -21,7 +20,6 @@
     mode: u=rwx,g=rx,o=
     state: directory
   tags:
-    - steamengine_deploy
     - steamengine_deploy_static
 
 - name: Update www directory
@@ -30,8 +28,12 @@
     archive_path: "{{ steamengine_project_root_path }}/project.zip"
     dest_path: "{{ steamengine_project_root_path_web }}"
   when: get_url_build.changed
+  args:
+    apply:
+      tags:
+        - steamengine_deploy
+        - steamengine_deploy_static
   tags:
-    - steamengine_deploy
     - steamengine_deploy_static
 
 - name: "Add read permission for {{ steamengine_app_user }}"
@@ -42,5 +44,4 @@
     recurse: true
     mode: u=rwx,g=rx,o=
   tags:
-    - steamengine_deploy
     - steamengine_deploy_static
