--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,16 +7,44 @@
       - "steamengine_project_type in steamengine_project_types"
 
 - include_tasks: "{{ steamengine_project_type }}/asserts.yml"
+  args:
+    apply:
+      tags:
+        - steamengine_deploy
 
 - include_tasks: common/install_deps.yml
+  args:
+    apply:
+      tags:
+        - steamengine_dependencies
 
 - include_tasks: common/user.yml
+  args:
+    apply:
+      tags:
+        - steamengine_user
 
 - include_tasks: common/structure.yml
+  args:
+    apply:
+      tags:
+        - steamengine_structure
 
 - include_tasks: "{{ steamengine_project_type }}/deploy.yml"
   when: steamengine_build_url is defined
+  args:
+    apply:
+      tags:
+        - steamengine_deploy
 
 - include_tasks: common/runtime.yml
+  args:
+    apply:
+      tags:
+        - steamengine_runtime
 
 - include_tasks: "{{ steamengine_project_type }}/runtime.yml"
+  args:
+    apply:
+      tags:
+        - steamengine_runtime
